@@ -165,8 +165,8 @@ int onoff_value(const char *line);
 int command_quit(object *op, char *params);
 int command_explore(object *op, char *params);
 int command_sound(object *op, char *params);
-void receive_player_name(object *op, char k);
-void receive_player_password(object *op, char k);
+void receive_player_name(object *op);
+void receive_player_password(object *op);
 int command_title(object *op, char *params);
 int command_save(object *op, char *params);
 int command_peaceful(object *op, char *params);
@@ -223,7 +223,7 @@ partylist *form_party(object *op, const char *params);
 void remove_party(partylist *target_party);
 void obsolete_parties(void);
 int confirm_party_password(object *op);
-void receive_party_password(object *op, char k);
+void receive_party_password(object *op);
 void send_party_message(object *op, char *msg);
 int command_gsay(object *op, char *params);
 int command_party(object *op, char *params);
